<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#48D0B0"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="100dp"
            android:text="@string/bulbassauro"
            android:textColor="#FFFEFE"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/curva"
                android:text="@string/grama"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="90dp"
                android:layout_weight="1"
                android:background="@drawable/curva"
                android:text="@string/venenoso"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            app:srcCompat="@drawable/bulbasaur" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/curva2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="25dp"
                android:text="@string/sobre"
                android:textColor="#605C5C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:background="@drawable/curva3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/altura"
                        android:textAlignment="center"
                        android:textColor="#575050"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_70cm"
                        android:textAlignment="center"
                        android:textColor="#5A4F4F"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/peso"
                        android:textAlignment="center"
                        android:textColor="#5A5252"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_69kg"
                        android:textAlignment="center"
                        android:textColor="#574E4E"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="7dp"
                android:text="@string/treinamento"
                android:textColor="#534B4B"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/base_exp"
                    android:textColor="#4E4747"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_64"
                    android:textColor="#4E4747"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="7dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>